xml-lite.bnf
document ::= prolog root

prolog ::= XmlDec | epsilon 

XmlDec ::= '<?xml' VersionInfo optElements '?>'

VersionInfo ::= 'version' '=' versionNumber 

versionNumber ::= ''' VERSION ''' | '"' VERSION '"'

optElements ::= optElement optElements | epsilon

optElement ::= encoding

encoding ::= 'encoding' '=' value

value ::= ''' STRING ''' | '"' STRING '"'


root ::= node

node ::= '<' STRING property_list '>' body_element_list '</' STRING '>'

property_list ::= VARIABLE '=' value property_list | epsilon

body_element_list ::= body_element body_element_list | epsilon

body_element ::= STRING | node  

VARIABLE -> [a-zA-Z][[a-zA-Z0-9]*;
STRING -> [^'"]
